# endio_bit

./: Cargo.toml
.github/workflows/: docs.yml
src/: endian.rs  lib.rs  read.rs  write.rs
