[package]
name = "endio_bit"
version = "0.2.0"
authors = ["lcdr"]
edition = "2024"
description = "Bit-level reading and writing, modeled after std::io::{BufReader, BufWriter}."
keywords = ["binary", "bit", "bitstream", "io"]
categories = ["encoding", "parsing"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jadebenn/endio_bit/"

[dependencies]

[lints.clippy]
pedantic = "warn"
